--- a/snack-3/index.html
+++ b/snack-3/index.html
@@ -7,6 +7,10 @@
    <title>Document</title>
 </head>
 <body>
+   <div class="container">
+      <div class="red"></div>
+      <div class="green"></div>
+   </div>
    <script src="main.js"></script>
 </body>
 </html>
